Added links and fixed redirect

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>LetzTour</title>
 </head>
 <body>
-    <p>Yo mamma test!!</p>
+    <h1>OverView of links</h1>
+    <a href="LetzTour/public/index.html">Go to other index</a>
     
 </body>
 </html>
