trying to get svete functions to work

--- a/LetzTour/public/index.html
+++ b/LetzTour/public/index.html
@@ -20,6 +20,16 @@
 
   <body>
     <script src="/bundle.js"></script>
+    <Navbar title="Menu">
+      <ul>
+        <li><a href="#">Link 01</a></li>
+        <li><a href="#">Link 02</a></li>
+        <li><a href="#">Link 03</a></li>
+        <li><a href="#">Link 04</a></li>
+      </ul>
+    </Navbar>
     <h1>Welcome to LetzTour</h1>
+    <Menu />
+    <Hero />
   </body>
 </html>
