creating link for public view

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>OverView of links</h1>
-    <a href="LetzTour/public/index.html">Go to other index</a>
+    <a href="LetzTour/src/app.html">Go to other index</a>
     
 </body>
 </html>
